Restructure architecture docs and add remediation plan